Fazer Login todos os usuarios SWAGLAB e Validar Status

--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,16 @@
 		    <version>6.7.0</version>
 		</dependency>
 		
-		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito -->
+		
 
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -51,6 +54,12 @@
 		<dependency>
 		    <groupId>net.masterthought</groupId>
 		    <artifactId>maven-cucumber-reporting</artifactId>
+		    <version>4.11.2</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>net.masterthought</groupId>
+		    <artifactId>cucumber-reporting</artifactId>
 		    <version>4.11.2</version>
 		</dependency>
 		
@@ -82,7 +91,27 @@
 		    <version>7.1.13</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
+		<dependency>
+		    <groupId>org.apache.maven</groupId>
+		    <artifactId>maven-plugin-api</artifactId>
+		    <version>3.6.3</version>
+		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
+		<dependency>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-gpg-plugin</artifactId>
+		    <version>1.6</version>
+		</dependency>		
+		
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-all</artifactId>
+		    <version>1.3</version>
+		    <scope>test</scope>
+		</dependency>	
 		
 		
 	</dependencies>
@@ -121,10 +150,15 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<projectName>cucumber-jvm-example</projectName>
-							<outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
-							<cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>					
-						</configuration>
+                			<projectName>test-automation</projectName>
+				                <outputDirectory>${project.build.directory}</outputDirectory>
+				                <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+				                <jsonFiles>
+                                	<!-- supports wildcard or name pattern -->
+                                	<param>**/*.json</param>
+                            	</jsonFiles>
+				                <skippedFails>true</skippedFails>
+            				</configuration>
 					</execution>
 				</executions>
 			</plugin>
