--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,13 @@
 	<description>Projeto exemplo de automação</description>
 
 	<properties>
-		<cucumber.version>5.0.0-RC2</cucumber.version>
+		<cucumber.version>5.7.0</cucumber.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<aspectj.version>1.8.10</aspectj.version>
 	</properties>
 
 	<dependencies>
-		<dependency> 
+		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>${cucumber.version}</version>
@@ -27,40 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
-		<dependency>
-		    <groupId>io.cucumber</groupId>
-		    <artifactId>cucumber-testng</artifactId>
-		    <version>6.7.0</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-		    <groupId>junit</groupId>
-		    <artifactId>junit</artifactId>
-		    <version>4.12</version>
-		    <scope>test</scope>
-		</dependency>
-		
 		<!-- https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito -->
-		
-
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>3.141.59</version>
-		</dependency>
-		
-		<dependency>
-		    <groupId>net.masterthought</groupId>
-		    <artifactId>maven-cucumber-reporting</artifactId>
-		    <version>4.11.2</version>
-		</dependency>
-		
-		<dependency>
-		    <groupId>net.masterthought</groupId>
-		    <artifactId>cucumber-reporting</artifactId>
-		    <version>4.11.2</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.itextpdf/itextpdf -->
@@ -90,30 +62,55 @@
 		    <artifactId>kernel</artifactId>
 		    <version>7.1.13</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-plugin-api -->
-		<dependency>
-		    <groupId>org.apache.maven</groupId>
-		    <artifactId>maven-plugin-api</artifactId>
-		    <version>3.6.3</version>
-		</dependency>
-		
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-plugin-api</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-gpg-plugin -->
-		<dependency>
-		    <groupId>org.apache.maven.plugins</groupId>
-		    <artifactId>maven-gpg-plugin</artifactId>
-		    <version>1.6</version>
-		</dependency>		
-		
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
 		<dependency>
 		    <groupId>org.hamcrest</groupId>
 		    <artifactId>hamcrest-all</artifactId>
 		    <version>1.3</version>
 		    <scope>test</scope>
-		</dependency>	
-		
-		
+		</dependency>
+
+		<dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-cucumber5-jvm -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber5-jvm</artifactId>
+            <version>2.13.6</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-maven</artifactId>
+            <version>2.10.0</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
@@ -129,39 +126,42 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
-				<configuration>
-					<includes>
-						<include>**/*Runner.java</include>
-					</includes>
-				</configuration>
-			</plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                 <!--
+                 <version>2.10.0</version>
+
+
+                <configuration>
+                    <reportVersion>2.7.0</reportVersion>
+                </configuration>
+                -->
+            </plugin>
 			<plugin>
-				<groupId>net.masterthought</groupId>
-				<artifactId>maven-cucumber-reporting</artifactId>
-				<version>4.11.2</version>
-				<executions>
-					<execution>
-						<id>execution</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-                			<projectName>test-automation</projectName>
-				                <outputDirectory>${project.build.directory}</outputDirectory>
-				                <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
-				                <jsonFiles>
-                                	<!-- supports wildcard or name pattern -->
-                                	<param>**/*.json</param>
-                            	</jsonFiles>
-				                <skippedFails>true</skippedFails>
-            				</configuration>
-					</execution>
-				</executions>
-			</plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>allure.results.directory</name>
+                            <value>${project.build.directory}/allure-results</value>
+                        </property>
+                    </systemProperties>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                        -Dcucumber.options="--plugin io.qameta.allure.cucumber5jvm.AllureCucumber5Jvm"
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 		</plugins>
 	</build>
 
